--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,34 @@
-.node_modules
+node_modules
+
 .env
 .env.local
+
+.next/
+
+.DS_Store
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+logs/
+*.log
+
+# TypeScript
+*.tsbuildinfo
+
+# IDE/Editor
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Temporary files
+*.tmp
+*.temp
+
+# Coverage
+coverage/
+
+# Test output
+*.out
