--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/material": "^6.1.9",
+    "@mui/styled-engine-sc": "^6.1.9",
+    "@tanstack/react-form": "^0.39.0",
     "@tanstack/react-query": "^5.62.0",
+    "@tanstack/yup-form-adapter": "^0.39.0",
     "classnames": "^2.5.1",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.3",
@@ -18,7 +24,9 @@
     "react-dom": "^18.3.1",
     "react-loading-skeleton": "^3.5.0",
     "sass": "^1.81.0",
-    "scss": "^0.2.4"
+    "scss": "^0.2.4",
+    "styled-components": "^6.1.13",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.61.6",
